--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 <!-- Hero Section -->
 <section class="hero bg-primary ">
     <div class="container">
-        <img src="{% static 'images/hero-bg.jpg' %}">
+        <img src="{% static 'images\hero-bg.jpg' %}">
         <h1>Welcome to Spectrasway Event</h1>
         <p>Plan Events Smarter with AI!</p>
         <a href="/ai_generator" class="btn btn-light btn-lg">Generate Your Event</a>
